--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </head>
-<body>
+<body onload="init()">
   <nav class="navbar bg-body-tertiary">
     <div class="container-fluid">
       <span class="navbar-brand mb-0 h1">QuizApp</span>
@@ -22,35 +22,35 @@
       <div class="card quiz-card">
         <img src="src/img/brainbg.jpg" class="card-img-top">
         <div class="card-body">
-          <h5 class="card-title">Frage</h5>
+          <h5 class="card-title" id="questionText">Frage</h5>
 
           <div class="card mb-2">
-            <div class="card-body">
+            <div class="card-body" id="answer_1">
                Antwort
             </div>
           </div>
 
           <div class="card mb-2">
-            <div class="card-body">
+            <div class="card-body" id="answer_2">
               Antwort
             </div>
           </div>
 
           <div class="card mb-2">
-            <div class="card-body">
+            <div class="card-body" id="answer_3">
               Antwort
             </div>
           </div>
 
           <div class="card mb-2">
-            <div class="card-body">
+            <div class="card-body" id="answer_4">
               Antwort
             </div>
           </div>
 
           <div class="question-footer">
             <span>
-              <b>1</b> von <b>5</b> Fragen
+              <b>1</b> von <b id="all-questions">5</b> Fragen
             </span>
             <button class="btn btn-dark">Nächste Frage</button>
           </div>
